--- a/modes/world1/config/world1.yaml
+++ b/modes/world1/config/world1.yaml
@@ -89,6 +89,12 @@ variable_player:
     #Mark World as Setup
     world1_setup: 1
 
+widget_player:
+  mode_world1_started:
+    widget_screenbackground:
+      action: update
+      image: world1_background
+
 event_player:
   world_collected:
     world1_collected
