--- a/modes/world4/config/world4.yaml
+++ b/modes/world4/config/world4.yaml
@@ -89,6 +89,12 @@ variable_player:
     #Mark World as Setup
     world4_setup: 1
 
+widget_player:
+  mode_world4_started:
+    widget_screenbackground:
+      action: update
+      image: world4_background
+
 event_player:
    world_collected:
     world4_collected
