--- a/modes/night/config/night.yaml
+++ b/modes/night/config/night.yaml
@@ -278,6 +278,13 @@ shot_groups:
     disable_events: mode_night_started
     enable_events: nightmb_phase3_started
 
+widget_player:
+  mode_night_started:
+    widget_screenbackground:
+      action: update
+      widget_settings:
+        image: nightmode_background
+
 event_player:
   mode_night_started:
     outlanegate_close
