--- a/modes/theend/config/theend.yaml
+++ b/modes/theend/config/theend.yaml
@@ -10,6 +10,13 @@ show_player:
       loops: -1
       speed: 1
 
+widget_player:
+  mode_theend_started:
+    widget_screenbackground:
+      action: update
+      widget_settings:
+        image: theend_background
+
 event_player:
   mode_theend_started:
     theendmultiball_ready
