--- a/modes/world2/config/world2.yaml
+++ b/modes/world2/config/world2.yaml
@@ -93,7 +93,8 @@ widget_player:
   mode_world2_started:
     widget_screenbackground:
       action: update
-      image: world2_background
+      widget_settings:
+        image: world2_background
 
 event_player:
   world_collected:
