--- a/modes/world3/config/world3.yaml
+++ b/modes/world3/config/world3.yaml
@@ -93,7 +93,8 @@ widget_player:
   mode_world3_started:
     widget_screenbackground:
       action: update
-      image: world3_background
+      widget_settings:
+        image: world3_background
 
 event_player:
    world_collected:
