--- a/modes/world5/config/world5.yaml
+++ b/modes/world5/config/world5.yaml
@@ -93,6 +93,7 @@ widget_player:
   mode_world5_started:
     widget_screenbackground:
       action: update
+      slide: base_slide
       widget_settings:
         image: world5_background
 
