--- a/modes/world2/config/world2.yaml
+++ b/modes/world2/config/world2.yaml
@@ -93,7 +93,7 @@ widget_player:
   mode_world2_started:
     widget_screenbackground:
       action: update
-      slide: base_slide
+      slide: world_slide
       widget_settings:
         image: world2_background
 
