--- a/modes/world3/config/world3.yaml
+++ b/modes/world3/config/world3.yaml
@@ -93,7 +93,7 @@ widget_player:
   mode_world3_started:
     widget_screenbackground:
       action: update
-      slide: base_slide
+      slide: world_slide
       widget_settings:
         image: world3_background
 
