--- a/modes/world1/config/world1.yaml
+++ b/modes/world1/config/world1.yaml
@@ -96,6 +96,26 @@ widget_player:
       slide: world_slide
       widget_settings:
         image: world1_background
+    widget_item1icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: Grass_Small
+    widget_item2icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: Stone_Small
+    widget_item3icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: IronOre_Small
+    widget_item4icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: WoodOak_Small
 
 event_player:
   world_collected:
