--- a/modes/world2/config/world2.yaml
+++ b/modes/world2/config/world2.yaml
@@ -96,6 +96,26 @@ widget_player:
       slide: world_slide
       widget_settings:
         image: world2_background
+    widget_item1icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: Sand_Small
+    widget_item2icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: SandStone_Small
+    widget_item3icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: Coal_Small
+    widget_item4icon:
+      action: update
+      slide: world_slide
+      widget_settings:
+        image: WoodAcadia_Small
 
 event_player:
   world_collected:
